@startuml scenario_uml
skinparam classAttributeIconSize 0
left to right direction

class GameSun{
    +sunName
    {static} -gameSun : GameSun
    -GameSun()
    {static} +Instance() : GameSun
    +Rise()
}

class SingletonMainClass{
    {static} +Main()
}


GameSun <-- GameSun
GameSun  <--- SingletonMainClass


@enduml